--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
 			<th style="width:10px; height:auto; background-color:#448D61;;"></th>
 
 			<th style="width:35%; height:140px; background-color: #448D61;">
-				<img src="./Imagenes/Foto.jpeg" alt="Fotona" width=200px; height=auto; style="border-radius:50%; border: solid white 4px; margin: 2px; 						position:absolute ; left:5%; top:0px">
+				<img src="Imagenes/Foto.jpeg" alt="Fotona" width=200px; height=auto; style="border-radius:50%; border: solid white 4px; margin: 2px; 						position:absolute ; left:5%; top:0px">
 			</th>
 
 			<th style="width:65%; background-color: #448D61;">
@@ -229,4 +229,5 @@
 
 	</table>
 </body>
+
 </html>
